--- a/CBayMobileApp/Views/Cart/Cart.xaml
+++ b/CBayMobileApp/Views/Cart/Cart.xaml
@@ -1,52 +1,93 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:controls="clr-namespace:CBayMobileApp.Controls"
              x:Class="CBayMobileApp.Views.Cart.Cart"
              BackgroundColor="#FAFBFF">
 
-    <CollectionView ItemsSource="{Binding Transaction}" Margin="20,50" >
-        <CollectionView.ItemsLayout>
-            <GridItemsLayout VerticalItemSpacing="0" HorizontalItemSpacing="10" Orientation="Vertical"/>
-        </CollectionView.ItemsLayout>
-        <CollectionView.ItemTemplate>
-            <DataTemplate>
-                <StackLayout>
-                    <Label Text="{Binding newDate}" FontSize="14" TextColor="#000000" FontAttributes="Bold" FontFamily="DMSans-Medium"/>
+    <RefreshView IsRefreshing="{Binding IsRefreshing, Mode=TwoWay}" Command="{Binding RefreshCommand}" RefreshColor="{StaticResource PrimaryColor}" Margin="20">
+        <StackLayout>
+            <CollectionView  x:Name="cvBanner" ItemsSource="{Binding CartItem}" Margin="20">
+                <CollectionView.ItemsLayout>
+                    <GridItemsLayout VerticalItemSpacing="10" HorizontalItemSpacing="10" Orientation="Vertical" />
+                </CollectionView.ItemsLayout>
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="auto"/>
+                            </Grid.RowDefinitions>
+                            <Frame HasShadow="True" BackgroundColor="White" BorderColor="#cccccc" Padding="10,5" Grid.Row="0">
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding Path=BindingContext.TappedCommand, Source={x:Reference cvBanner}}" CommandParameter="{Binding .}"/>
+                                </Frame.GestureRecognizers>
+                                <StackLayout Margin="0,10" Orientation="Horizontal" Spacing="15">
+                                    <StackLayout Spacing="-10">
+                                        <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand">
+                                            <StackLayout>
+                                                <Image Source="{Binding defaultPictureLocation}" WidthRequest="100" HeightRequest="100"/>
+                                            </StackLayout>
+                                            <StackLayout VerticalOptions="CenterAndExpand">
+                                                <Label Text="{Binding productName}" TextColor="#000000" FontSize="16" FontFamily="Rubik-Medium"/>
+                                                <StackLayout Orientation="Horizontal">
+                                                    <Label Text="Available quantity:" TextColor="#000000" FontSize="13" FontFamily="Rubik-Medium"/>
+                                                    <Label Text="{Binding quantity}" TextColor="#000000" FontSize="13" FontFamily="Rubik-Medium"/>
+                                                </StackLayout>
+                                                <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand">
+                                                    <Label Text="NGN" TextColor="{StaticResource PrimaryColor}" FontSize="13" FontFamily="Rubik-Medium" VerticalOptions="Center"/>
+                                                    <Label Text="{Binding productPrice}" TextColor="Black" FontSize="16" FontFamily="Rubik-Medium" VerticalTextAlignment="Center"/>
+                                                </StackLayout>
+                                            </StackLayout>
+                                        </StackLayout>
+                                        <FlexLayout JustifyContent="SpaceBetween" AlignContent="Center" AlignItems="Center" Margin="0,5,0,0">
+                                            <StackLayout Orientation="Horizontal" Spacing="3">
+                                                <StackLayout.GestureRecognizers>
+                                                    <TapGestureRecognizer  Command="{Binding Path=BindingContext.DeleteCommand, Source={x:Reference cvBanner}}" CommandParameter="{Binding .}"/>
+                                                </StackLayout.GestureRecognizers>
+                                                <ImageButton Source="welcomeBack.png" WidthRequest="20" HeightRequest="20"
+                                                                 Command="{Binding Path=BindingContext.DeleteCommand, Source={x:Reference cvBanner}}" CommandParameter="{Binding .}"/>
+                                                <Label Text="Delete" TextColor="{StaticResource PrimaryColor}" FontSize="16" FontFamily="Rubik-Medium"/>
+                                            </StackLayout>
+                                            <StackLayout Orientation="Horizontal" Spacing="5">
+                                                <Label Text="Quantity:" TextColor="#000000" FontSize="14" FontFamily="Rubik-Medium"/>
+                                                <Frame  BorderColor="Gray"
+                                                            Margin="0"
+                                                            Padding="0,-15"
+                                                            HorizontalOptions="Center"
+                                                            WidthRequest="50"
+                                                            HeightRequest="50">
+                                                    <controls:CustomEntry 
+                                                            VerticalTextAlignment="Center"
+                                                            HorizontalTextAlignment="Center"
+                                                            Keyboard="Numeric"
+                                                            FontSize="14"
+                                                            FontAttributes="Bold"
+                                                            MaxLength="4"
+                                                            Text="{Binding ProductQantity, Mode=TwoWay}"
+                                                            TextColor="Black"/>
+                                                </Frame>
+                                            </StackLayout>
+                                        </FlexLayout>
+                                    </StackLayout>
+                                </StackLayout>
+                            </Frame>
+                        </Grid>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+            <StackLayout  VerticalOptions="EndAndExpand" Margin="0,30,0,10" Grid.Row="1">
+                <Frame HasShadow="False" CornerRadius="5" BackgroundColor="{StaticResource PrimaryColor}" Margin="0,10,0,0" Padding="0,15" >
+                    <Frame.GestureRecognizers>
+                        <TapGestureRecognizer  Command="{Binding Path=BindingContext.NextCommand, Source={x:Reference cvBanner}}" CommandParameter="{Binding .}"/>
 
-                    <FlexLayout JustifyContent="SpaceBetween" VerticalOptions="Center">
-                        <StackLayout Orientation="Horizontal" Spacing="10">
-                            <Image Source="{Binding PlusImage}"/>
-
-                            <StackLayout>
-                                <Label Text="{Binding description}" FontSize="14" TextColor="#333333" FontAttributes="Bold"/>
-                                <Label Text="{Binding time}" FontSize="14" TextColor="#333333"  FontFamily="DMSans-Medium"/>
-                            </StackLayout>
-                        </StackLayout>
-                        <StackLayout Orientation="Horizontal" Spacing="2">
-                            <Label Text="{Binding amount}" FontSize="15" TextColor="#333333" FontAttributes="Bold" FontFamily="DMSans-Medium"/>
-                        </StackLayout>
-
-                    </FlexLayout>
-                    <Line X1="0"
-                          Y1="0"
-                          X2="400"
-                          Y2="0"
-                          Margin="0,0"
-                          Stroke="#524344"
-                          StrokeDashArray="0,0"
-                          StrokeDashOffset="2"/>
-
-                </StackLayout>
-
-            </DataTemplate>
-        </CollectionView.ItemTemplate>
-        <CollectionView.EmptyView>
-            <StackLayout VerticalOptions="Center"  HorizontalOptions="Center">
-                <Image Source="blank3.png" HeightRequest="70" VerticalOptions="Center" HorizontalOptions="Center"/>
-                <Label  Margin="0,4,0,0" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold">No Item added</Label>
+                    </Frame.GestureRecognizers>
+                    <Label Text="Check out" TextColor="#ffffff" FontFamily="Rubik-Regular" FontSize="18"  Margin="0,0,0,0" 
+                                   HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
+                </Frame>
             </StackLayout>
-        </CollectionView.EmptyView>
-    </CollectionView>
+        </StackLayout>
+    </RefreshView>
 
 
 
