--- a/CBayMobileApp/Views/Cart/ConfirmCartOrder.xaml
+++ b/CBayMobileApp/Views/Cart/ConfirmCartOrder.xaml
@@ -23,71 +23,18 @@
             </StackLayout>-->
         </StackLayout>
 
-        <ScrollView Grid.Row="1" Margin="20,10" VerticalScrollBarVisibility="Never">
+        <ScrollView Grid.Row="1" Margin="20,30" VerticalScrollBarVisibility="Never">
             <StackLayout>
 
-                <Frame HasShadow="False" CornerRadius="5" BackgroundColor="{StaticResource PrimaryColor}" Margin="0,20,0,0" Padding="0,15" >
+                <!--<Frame HasShadow="False" CornerRadius="5" BackgroundColor="{StaticResource PrimaryColor}" Margin="0,20,0,0" Padding="0,15" >
                     <Frame.GestureRecognizers>
                         <TapGestureRecognizer  Command="{Binding NewAddressCommand}"/>
                     </Frame.GestureRecognizers>
                     <Label Text="Add New Address" TextColor="#ffffff" FontFamily="Rubik-Regular" FontSize="18"  Margin="0,0,0,0" 
                            HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
-                </Frame>
+                </Frame>-->
 
-                <!--<StackLayout Margin="0,0,0,0" Spacing="0">
-                    <Label Text="Select wallet to transact from"
-                            FontFamily="Roboto-Regular"
-                            FontSize="16"
-                            Margin="0,5,0,5"
-                            TextColor="Black"/>
-
-                    <pv:PancakeView BackgroundColor="White"
-                                    CornerRadius="5"
-                                    HorizontalOptions="Fill" 
-                                    HeightRequest="50"
-                                    Padding="10,0">
-                        <pv:PancakeView.Border>
-                            <pv:Border Color="#72708D" Thickness="3"/>
-                        </pv:PancakeView.Border>
-                        <Grid HorizontalOptions="FillAndExpand"
-                              VerticalOptions="FillAndExpand">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="7*"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid HorizontalOptions="StartAndExpand"
-                                  VerticalOptions="CenterAndExpand" 
-                                  Grid.Column="0">
-
-                                <StackLayout Orientation="Vertical"
-                                             VerticalOptions="CenterAndExpand">
-                                    <Label Text="{Binding WalletNo, Mode=TwoWay}"
-                                           HorizontalOptions="StartAndExpand"
-                                           VerticalOptions="CenterAndExpand"
-                                           FontFamily="Roboto-Medium"
-                                           TextColor="#000000"
-                                           FontSize="16"/>
-
-                                </StackLayout>
-
-                            </Grid>
-
-                            <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" Margin="0,0,10,0">
-                                <ImageButton BackgroundColor="Transparent" Command="{Binding FilterCommand}" CommandParameter="{Binding .}" Source="downarrow1.png" WidthRequest="15" 
-                                             HeightRequest="15"/>
-                            </StackLayout>
-
-                        </Grid>
-                        <pv:PancakeView.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding FilterCommand}"
-                                                      CommandParameter="{Binding .}"
-                                                      NumberOfTapsRequired="1"/>
-                        </pv:PancakeView.GestureRecognizers>
-                    </pv:PancakeView>
-                </StackLayout>-->
-
-
-                <StackLayout Margin="0,10" Spacing="0">
+                <!--<StackLayout Margin="0,10" Spacing="0">
                     <StackLayout Orientation="Horizontal">
                         <Label Text="Select shipping address"
                                FontFamily="Rubik-Regular"
@@ -136,8 +83,11 @@
                             </StackLayout>
                         </StackLayout>
                     </FlexLayout>
-                </Frame>
+                </Frame>-->
+
+
                 <StackLayout>
+
                     <StackLayout  x:Name="cvBanner" BindableLayout.ItemsSource="{Binding CartDetail}">
                         <BindableLayout.ItemTemplate>
                             <DataTemplate>
@@ -177,6 +127,40 @@
                             Text="{Binding DeliveryInstruction}"
                             Placeholder="Enter delivery note"
                             TextColor="Black"/>
+                    </Frame>
+                </StackLayout>
+                <StackLayout Margin="0,10,0,0">
+                    <Label Text="Address"
+                               FontFamily="Poppins-Light"
+                               FontSize="14"
+                               Margin="0,0"
+                               TextColor="Black"/>
+
+                    <Frame Padding="10,0,10,0" BorderColor="#cccccc" HeightRequest="45" Margin="0,0,0,10" HasShadow="False">
+                        <controls:CustomEntry 
+                                    VerticalTextAlignment="Center"
+                                    FontSize="14"
+                                    Text="{Binding Address}"
+                                    Placeholder="Enter address"
+                                    PlaceholderColor="#cccccc"
+                                    TextColor="Black"/>
+                    </Frame>
+                </StackLayout>
+                <StackLayout Margin="0,0,0,0">
+                    <Label Text="City"
+                               FontFamily="Poppins-Light"
+                               FontSize="14"
+                               Margin="0,0"
+                               TextColor="Black"/>
+
+                    <Frame Padding="10,0,10,0" BorderColor="#cccccc" HeightRequest="45" Margin="0,0,0,10" HasShadow="False">
+                        <controls:CustomEntry 
+                                    VerticalTextAlignment="Center"
+                                    FontSize="14"
+                                    Text="{Binding City}"
+                                    Placeholder="Enter city"
+                                    PlaceholderColor="#cccccc"
+                                    TextColor="Black"/>
                     </Frame>
                 </StackLayout>
                 <Frame HasShadow="False" CornerRadius="5" BackgroundColor="{StaticResource PrimaryColor}" Margin="0,0,0,10" Padding="0,15" >
