--- a/CBayMobileApp/Views/Products/Products.xaml
+++ b/CBayMobileApp/Views/Products/Products.xaml
@@ -17,22 +17,27 @@
         </FlexLayout>
         <CollectionView x:Name="cvBanners" ItemsSource="{Binding ProductData}" Margin="0,20">
             <CollectionView.ItemsLayout>
-                <GridItemsLayout VerticalItemSpacing="15" HorizontalItemSpacing="5" Orientation="Vertical" Span="2"/>
+                <GridItemsLayout VerticalItemSpacing="10" HorizontalItemSpacing="10" Orientation="Vertical" Span="2"/>
             </CollectionView.ItemsLayout>
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <StackLayout>
-                        <StackLayout.GestureRecognizers>
+                    <Frame Padding="20" CornerRadius="10" HasShadow="False" BackgroundColor="#EFF1F8">
+                        <Frame.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding Path=BindingContext.TappedCommand, Source={x:Reference cvBanners}}" CommandParameter="{Binding .}"/>
-                        </StackLayout.GestureRecognizers>
-                        <Image Source="{Binding defaultPictureLocation}" WidthRequest="100" HeightRequest="100"/>
-                        <Label Text="{Binding name}" TextColor="#272728" FontSize="14" Margin="10,0,0,0" FontFamily="DMSans-Regular" HorizontalTextAlignment="Start"/>
-                        <StackLayout Orientation="Horizontal" Spacing="0" Margin="10,0,0,0">
-                            <Label Text="NGN" TextColor="#272728" FontSize="14" FontFamily="DMSans-Regular"/>
-                            <Label Text="{Binding productPrice}" TextColor="#272728" FontSize="14" FontFamily="DMSans-Regular"/>
-                            <Label Text=".00" TextColor="#272728" FontSize="14" FontFamily="DMSans-Regular"/>
+                        </Frame.GestureRecognizers>
+                        <StackLayout >
+                            <StackLayout.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding Path=BindingContext.TappedCommand, Source={x:Reference cvBanners}}" CommandParameter="{Binding .}"/>
+                            </StackLayout.GestureRecognizers>
+                            <Image Source="{Binding defaultPictureLocation}" WidthRequest="100" HeightRequest="100" HorizontalOptions="StartAndExpand"/>
+                            <Label Text="{Binding name}" TextColor="#272728" FontSize="14" Margin="10,0,0,0" FontFamily="DMSans-Regular" HorizontalTextAlignment="Start"/>
+                            <StackLayout Orientation="Horizontal" Spacing="1" Margin="10,0,0,0">
+                                <Label Text="NGN" TextColor="#272728" FontSize="14" FontFamily="DMSans-Regular"/>
+                                <Label Text="{Binding price}" TextColor="#272728" FontSize="14" FontFamily="DMSans-Regular"/>
+                                <Label Text=".00" TextColor="#272728" FontSize="14" FontFamily="DMSans-Regular"/>
+                            </StackLayout>
                         </StackLayout>
-                    </StackLayout>
+                    </Frame>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
             <!--<CollectionView.EmptyView>
