--- a/CBayMobileApp/Views/Account/Membership.xaml
+++ b/CBayMobileApp/Views/Account/Membership.xaml
@@ -12,12 +12,12 @@
 
                 <StackLayout Orientation="Horizontal" Spacing="0">
                     <Label Text="Ref code: " TextColor="#000000" FontSize="14" FontFamily="DMSans-Regular"/>
-                    <Label Text="{Binding JoinedDate}" TextColor="#000000" FontSize="14" FontFamily="DMSans-Regular"/>
+                    <Label Text="{Binding RefCode}" TextColor="{StaticResource PrimaryColor}" FontSize="14" FontFamily="DMSans-Medium"/>
                 </StackLayout>
 
                 <Frame BackgroundColor="{StaticResource PrimaryColor}" Padding="20,15,20,10" HorizontalOptions="FillAndExpand" CornerRadius="10" Margin="0,10" HasShadow="False">
                     <StackLayout Margin="0,0,0,0">
-                        <Label Text="{Binding Name}" TextColor="#ffffff" FontSize="32" FontFamily="DMSans-Medium"/>
+                        <Label Text="{Binding CurrentPlan}" TextColor="#ffffff" FontSize="32" FontFamily="DMSans-Medium"/>
                         <Label Text="CURRENT PLAN" TextColor="#ffffff" FontSize="14" FontFamily="DMSans-Medium" Margin="0,0,0,0"/>
                     </StackLayout>
                 </Frame>
