--- a/CBayMobileApp/Views/Cart/ConfirmCartOrder.xaml
+++ b/CBayMobileApp/Views/Cart/ConfirmCartOrder.xaml
@@ -8,170 +8,108 @@
              BackgroundColor="White">
 
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-
-        <StackLayout Grid.Row="0">
-            <!--<StackLayout Orientation="Horizontal" BackgroundColor="{StaticResource PrimaryColor}" Padding="20,10" Spacing="20">
-                <StackLayout VerticalOptions="Center">
-                    <ImageButton BackgroundColor="Transparent" Clicked="Back" Source="arrowwhiteleft.png"/>
-                </StackLayout>
-                <Label Text="Order Confirmation" TextColor="#ffffff" FontSize="16" FontFamily="Rubik-Medium" VerticalTextAlignment="Center"/>
-            </StackLayout>-->
-        </StackLayout>
-
-        <ScrollView Grid.Row="1" Margin="20,30" VerticalScrollBarVisibility="Never">
+    <ScrollView Grid.Row="1" Margin="20,30" VerticalScrollBarVisibility="Never">
+        <StackLayout>
             <StackLayout>
+                <StackLayout  x:Name="cvBanner" BindableLayout.ItemsSource="{Binding CartDetail}">
+                    <BindableLayout.ItemTemplate>
+                        <DataTemplate>
+                            <Frame Padding="10" CornerRadius="5" HasShadow="False" BackgroundColor="#ffffff" BorderColor="#cccccc">
+                                <StackLayout Margin="0,10" Orientation="Horizontal" VerticalOptions="CenterAndExpand">
+                                    <StackLayout>
+                                        <Image Source="{Binding defaultPictureLocation}" WidthRequest="100" HeightRequest="100"/>
+                                    </StackLayout>
+                                    <StackLayout Margin="0,15,0,0" VerticalOptions="CenterAndExpand">
+                                        <Label Text="{Binding productName}" TextColor="#000000" FontSize="13" FontFamily="Rubik-Medium"/>
+                                        <StackLayout Orientation="Horizontal" Spacing="2">
 
-                <!--<Frame HasShadow="False" CornerRadius="5" BackgroundColor="{StaticResource PrimaryColor}" Margin="0,20,0,0" Padding="0,15" >
-                    <Frame.GestureRecognizers>
-                        <TapGestureRecognizer  Command="{Binding NewAddressCommand}"/>
-                    </Frame.GestureRecognizers>
-                    <Label Text="Add New Address" TextColor="#ffffff" FontFamily="Rubik-Regular" FontSize="18"  Margin="0,0,0,0" 
-                           HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
-                </Frame>-->
-
-                <!--<StackLayout Margin="0,10" Spacing="0">
-                    <StackLayout Orientation="Horizontal">
-                        <Label Text="Select shipping address"
-                               FontFamily="Rubik-Regular"
-                               FontSize="14"
-                               Margin="0,0,0,5"
-                               TextColor="#1E1C00"/>
-
-                        <Label Text="*" TextColor="Red" Margin="0,-5,0,0"/>
-
-                    </StackLayout>
-                    <FlexLayout JustifyContent="SpaceBetween" >
-                        <StackLayout Orientation="Horizontal">
-
-                            <controls:BorderlessPicker Title="Select Address" TextColor="#49454F" Grid.Column="0" VerticalOptions="Center" FontFamily="Rubik-Regular"
-                                            FontSize="16" ItemsSource="{Binding ShippingAddress}" ItemDisplayBinding="{Binding address}" SelectedIndexChanged="AddressPicker_SelectedIndexChanged">
-
-                            </controls:BorderlessPicker>
-                        </StackLayout>
-                        <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" Margin="0,0,10,0">
-                            <Image Source="downarrow1.png" WidthRequest="12" HeightRequest="12"/>
-                        </StackLayout>
-                    </FlexLayout>
-                    <Line X1="0"
-                          Y1="5"
-                          X2="400"
-                          Y2="5"
-                          Margin="0,5,0,0"
-                          Stroke="#49454F"
-                          StrokeDashArray="0,0"
-                          StrokeDashOffset="2"/>
-                </StackLayout>
-
-                <Frame BackgroundColor="#ffffff" CornerRadius="5">
-                    <FlexLayout JustifyContent="SpaceBetween">
-                        <StackLayout Orientation="Horizontal">
-                            <Image Source="location1.png" VerticalOptions="StartAndExpand"/>
-                            <StackLayout>
-                                <Label x:Name="selectedName" TextColor="#1E1C00" FontSize="14" FontFamily="Rubik-Regular" VerticalTextAlignment="Center"/>
-                                <Label x:Name="selectedPhone" TextColor="#1E1C00" FontSize="12" FontFamily="Rubik-Regular" VerticalTextAlignment="Center"/>
-                                <Label x:Name="selectedAddress"  TextColor="#1E1C00" FontSize="12" FontFamily="Rubik-Regular" VerticalTextAlignment="Center"/>
-                                <StackLayout Orientation="Horizontal" Spacing="3">
-                                    <Label x:Name="selectedCity" TextColor="#1E1C00" FontSize="12" FontFamily="Rubik-Regular" VerticalTextAlignment="Center"/>
-                                    <Label x:Name="selectedCountry" TextColor="#1E1C00" FontSize="12" FontFamily="Rubik-Regular" VerticalTextAlignment="Center"/>
-                                </StackLayout>
-
-                            </StackLayout>
-                        </StackLayout>
-                    </FlexLayout>
-                </Frame>-->
-
-
-                <StackLayout>
-
-                    <StackLayout  x:Name="cvBanner" BindableLayout.ItemsSource="{Binding CartDetail}">
-                        <BindableLayout.ItemTemplate>
-                            <DataTemplate>
-                                <Frame Padding="10" CornerRadius="5" HasShadow="False" BackgroundColor="#ffffff" BorderColor="#cccccc">
-                                    <StackLayout Margin="0,10" Orientation="Horizontal" VerticalOptions="CenterAndExpand">
-                                        <StackLayout>
-                                            <Image Source="{Binding defaultPictureLocation}" WidthRequest="100" HeightRequest="100"/>
-                                        </StackLayout>
-                                        <StackLayout Margin="0,15,0,0">
-                                            <Label Text="{Binding productName}" TextColor="#000000" FontSize="13" FontFamily="Rubik-Medium"/>
-                                            <StackLayout Orientation="Horizontal" Spacing="2">
-
-                                                <Label Text="Amount:" TextColor="Black" FontSize="14" VerticalTextAlignment="Center" FontFamily="Rubik-Regular"/>
-                                                <Label Text="{Binding Approval}" TextColor="{StaticResource PrimaryColor}" FontSize="10" VerticalTextAlignment="Center" FontFamily="Rubik-Regular"/>
-                                                <Label Text="{Binding productPrice}" TextColor="{StaticResource PrimaryColor}" FontSize="13" FontFamily="Rubik-Medium"/>
-                                                <Label Text=".00" TextColor="{StaticResource PrimaryColor}" FontSize="13" FontFamily="Rubik-Medium"/>
-                                            </StackLayout>
+                                            <Label Text="Amount:" TextColor="Black" FontSize="14" VerticalTextAlignment="Center" FontFamily="Rubik-Regular"/>
+                                            <Label Text="{Binding Approval}" TextColor="{StaticResource PrimaryColor}" FontSize="10" VerticalTextAlignment="Center" FontFamily="Rubik-Regular"/>
+                                            <Label Text="{Binding productPrice}" TextColor="{StaticResource PrimaryColor}" FontSize="13" FontFamily="Rubik-Medium"/>
+                                            <Label Text=".00" TextColor="{StaticResource PrimaryColor}" FontSize="13" FontFamily="Rubik-Medium"/>
                                         </StackLayout>
                                     </StackLayout>
-                                </Frame>
-                            </DataTemplate>
-                        </BindableLayout.ItemTemplate>
-                    </StackLayout>
+                                </StackLayout>
+                            </Frame>
+                        </DataTemplate>
+                    </BindableLayout.ItemTemplate>
                 </StackLayout>
+            </StackLayout>
+            
+            <StackLayout Margin="0,10,0,10">
+                <Label Text="Delivery note" TextColor="#000000" FontSize="14" FontFamily="Rubik-Medium" VerticalTextAlignment="Center"/>
 
-
-
-
-                <StackLayout Margin="0,10,0,10">
-                    <Label Text="Delivery note" TextColor="#000000" FontSize="14" FontFamily="Rubik-Medium" VerticalTextAlignment="Center"/>
-
-                    <Frame BorderColor="#72708D"  CornerRadius="5" Padding="5" HasShadow="False">
-                        <controls:CustomEditor 
+                <Frame BorderColor="#72708D"  CornerRadius="5" Padding="5" HasShadow="False">
+                    <controls:CustomEditor 
                             FontFamily="Rubik-Regular"
                             FontSize="16"
                             AutoSize="TextChanges"
                             Text="{Binding DeliveryInstruction}"
                             Placeholder="Enter delivery note"
                             TextColor="Black"/>
-                    </Frame>
-                </StackLayout>
-                <StackLayout Margin="0,10,0,0">
-                    <Label Text="Address"
+                </Frame>
+            </StackLayout>
+            <StackLayout Margin="0,0,0,0">
+                <Label Text="Phone Number"
                                FontFamily="Poppins-Light"
                                FontSize="14"
                                Margin="0,0"
                                TextColor="Black"/>
 
-                    <Frame Padding="10,0,10,0" BorderColor="#cccccc" HeightRequest="45" Margin="0,0,0,10" HasShadow="False">
-                        <controls:CustomEntry 
+                <Frame Padding="10,0,10,0" BorderColor="#cccccc" HeightRequest="45" Margin="0,0,0,0" HasShadow="False">
+                    <controls:CustomEntry 
+                                    VerticalTextAlignment="Center"
+                                    FontSize="14"
+                                    Text="{Binding Phone}"
+                                    PlaceholderColor="#cccccc"
+                                    Keyboard="Numeric"
+                                    MaxLength="11"
+                                    TextColor="Black"/>
+                </Frame>
+            </StackLayout>
+            <StackLayout Margin="0,10,0,0">
+                <Label Text="Address"
+                               FontFamily="Poppins-Light"
+                               FontSize="14"
+                               Margin="0,0"
+                               TextColor="Black"/>
+
+                <Frame Padding="10,0,10,0" BorderColor="#cccccc" HeightRequest="45" Margin="0,0,0,0" HasShadow="False">
+                    <controls:CustomEntry 
                                     VerticalTextAlignment="Center"
                                     FontSize="14"
                                     Text="{Binding Address}"
                                     Placeholder="Enter address"
                                     PlaceholderColor="#cccccc"
                                     TextColor="Black"/>
-                    </Frame>
-                </StackLayout>
-                <StackLayout Margin="0,0,0,0">
-                    <Label Text="City"
+                </Frame>
+            </StackLayout>
+            <StackLayout Margin="0,10,0,0">
+                <Label Text="City"
                                FontFamily="Poppins-Light"
                                FontSize="14"
                                Margin="0,0"
                                TextColor="Black"/>
 
-                    <Frame Padding="10,0,10,0" BorderColor="#cccccc" HeightRequest="45" Margin="0,0,0,10" HasShadow="False">
-                        <controls:CustomEntry 
+                <Frame Padding="10,0,10,0" BorderColor="#cccccc" HeightRequest="45" Margin="0,0,0,10" HasShadow="False">
+                    <controls:CustomEntry 
                                     VerticalTextAlignment="Center"
                                     FontSize="14"
                                     Text="{Binding City}"
                                     Placeholder="Enter city"
                                     PlaceholderColor="#cccccc"
                                     TextColor="Black"/>
-                    </Frame>
-                </StackLayout>
-                <Frame HasShadow="False" CornerRadius="5" BackgroundColor="{StaticResource PrimaryColor}" Margin="0,0,0,10" Padding="0,15" >
-                    <Frame.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding PlaceOrderCommand}" CommandParameter="{Binding .}"/>
-                    </Frame.GestureRecognizers>
-                    <Label Text="Place Order" TextColor="#ffffff" FontFamily="Rubik-Regular" FontSize="18"  Margin="0,0,0,0" 
-                   HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
                 </Frame>
             </StackLayout>
-        </ScrollView>
-    </Grid>
+            <Frame HasShadow="False" CornerRadius="5" BackgroundColor="{StaticResource PrimaryColor}" Margin="0,10,0,10" Padding="0,15" >
+                <Frame.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding PlaceOrderCommand}" CommandParameter="{Binding .}"/>
+                </Frame.GestureRecognizers>
+                <Label Text="Place Order" TextColor="#ffffff" FontFamily="Rubik-Regular" FontSize="18"  Margin="0,0,0,0" 
+                   HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
+            </Frame>
+        </StackLayout>
+    </ScrollView>
+
 
 </ContentPage>
