--- a/CBayMobileApp/Views/Identity/LoginPage.xaml
+++ b/CBayMobileApp/Views/Identity/LoginPage.xaml
@@ -126,7 +126,7 @@
 
         <StackLayout Orientation="Horizontal" Spacing="0" HorizontalOptions="CenterAndExpand" Margin="0,10,0,0">
             <Label Text="New here? " TextColor="#000000" FontSize="16" />
-            <Label HorizontalOptions="CenterAndExpand" TextColor="{StaticResource PrimaryColor}" Margin="2,0,0,0" FontSize="16">
+            <Label HorizontalOptions="CenterAndExpand" TextColor="{StaticResource PrimaryColor}" FontAttributes="Bold" Margin="2,0,0,0" FontSize="16">
                 <Label.FormattedText>
                     <FormattedString>
                         <Span Text="Create an account" />
