--- a/CBayMobileApp/Views/Identity/SignupPage.xaml
+++ b/CBayMobileApp/Views/Identity/SignupPage.xaml
@@ -103,7 +103,7 @@
 
             <StackLayout Margin="0,10" Spacing="0">
                 <StackLayout Orientation="Horizontal">
-                    <Label Text="Password"
+                    <Label Text="Confirm Password"
                            FontFamily="Rubik-Regular"
                            FontSize="14"
                            Margin="0,0,0,-5"
@@ -213,6 +213,20 @@
                 <Label Text="Sign up with Facebook" TextColor="#000000" FontFamily="Rubik-Regular" FontSize="16"  Margin="0,0,0,0" 
                        HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
             </Frame>
+
+            <StackLayout Orientation="Horizontal" Spacing="0" HorizontalOptions="CenterAndExpand" Margin="0,10,0,0">
+                <Label Text="Already have an account? " TextColor="#000000" FontSize="16" />
+                <Label HorizontalOptions="CenterAndExpand" TextColor="{StaticResource PrimaryColor}" FontAttributes="Bold" Margin="2,0,0,0" FontSize="16">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span Text="Login" />
+                        </FormattedString>
+                    </Label.FormattedText>
+                    <Label.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="To_Login"/>
+                    </Label.GestureRecognizers>
+                </Label>
+            </StackLayout>
         </StackLayout>
 
     </ScrollView>
