--- a/CBayMobileApp/Views/Identity/UpdateProfile.xaml
+++ b/CBayMobileApp/Views/Identity/UpdateProfile.xaml
@@ -13,7 +13,7 @@
         </Grid.RowDefinitions>
 
         <Frame HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Grid.Row="0" BackgroundColor="#ffffff">
-            <StackLayout>
+            <!--<StackLayout>
                 <Grid Margin="20">
                     <StackLayout>
                         <Image Source="person2.png" Aspect="AspectFit"   WidthRequest="130" HeightRequest="130"/>
@@ -26,10 +26,10 @@
                         </Image>
                     </StackLayout>
                 </Grid>
-            </StackLayout>
+            </StackLayout>-->
         </Frame>
 
-        <ScrollView  Grid.Row="1" Margin="0,20">
+        <ScrollView  Grid.Row="1" Margin="0,10">
             <StackLayout>
                 <StackLayout Margin="20,0">
                     <Label Text="First Name"/>
