--- a/CBayMobileApp/Views/Products/OrderConfirmation.xaml
+++ b/CBayMobileApp/Views/Products/OrderConfirmation.xaml
@@ -6,81 +6,37 @@
              Title="Order Confirmation"
              BackgroundColor="White">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+    <ScrollView Margin="20,30" VerticalScrollBarVisibility="Never">
+        <StackLayout>
+            <Frame Padding="10" CornerRadius="5" HasShadow="False" BackgroundColor="#ffffff" BorderColor="#cccccc">
+                <StackLayout>
+                    <StackLayout  x:Name="cvBanner" BindableLayout.ItemsSource="{Binding ProductDetail}">
+                        <BindableLayout.ItemTemplate>
+                            <DataTemplate>
+                                <StackLayout Margin="0,10" Orientation="Horizontal">
+                                    <StackLayout>
+                                        <Image Source="{Binding defaultPictureLocation}" WidthRequest="100" HeightRequest="100"/>
+                                    </StackLayout>
+                                    <StackLayout Margin="0,15,0,0">
+                                        <Label Text="{Binding name}" TextColor="#000000" FontSize="13" FontFamily="Rubik-Medium"/>
+                                        <StackLayout Orientation="Horizontal" Spacing="2">
 
-        <StackLayout Grid.Row="0">
-        </StackLayout>
-
-        <ScrollView Grid.Row="1" Margin="20,30" VerticalScrollBarVisibility="Never">
-            <StackLayout>
-                <StackLayout Margin="0,10,0,0">
-                    <Label Text="Address"
-                               FontFamily="Poppins-Light"
-                               FontSize="14"
-                               Margin="0,0"
-                               TextColor="Black"/>
-
-                    <Frame Padding="10,0,10,0" BorderColor="#cccccc" HeightRequest="45" Margin="0,0,0,10" HasShadow="False">
-                        <controls:CustomEntry 
-                                    VerticalTextAlignment="Center"
-                                    FontSize="14"
-                                    Text="{Binding Address}"
-                                    Placeholder="Enter address"
-                                    PlaceholderColor="#cccccc"
-                                    TextColor="Black"/>
-                    </Frame>
-                </StackLayout>
-                <StackLayout Margin="0,10,0,0">
-                    <Label Text="City"
-                               FontFamily="Poppins-Light"
-                               FontSize="14"
-                               Margin="0,0"
-                               TextColor="Black"/>
-
-                    <Frame Padding="10,0,10,0" BorderColor="#cccccc" HeightRequest="45" Margin="0,0,0,10" HasShadow="False">
-                        <controls:CustomEntry 
-                                    VerticalTextAlignment="Center"
-                                    FontSize="14"
-                                    Text="{Binding City}"
-                                    Placeholder="Enter city"
-                                    PlaceholderColor="#cccccc"
-                                    TextColor="Black"/>
-                    </Frame>
-                </StackLayout>
-
-                <Frame Padding="10" CornerRadius="5" HasShadow="False" BackgroundColor="#ffffff" BorderColor="#cccccc">
-                    <StackLayout>
-                        <StackLayout  x:Name="cvBanner" BindableLayout.ItemsSource="{Binding ProductDetail}">
-                            <BindableLayout.ItemTemplate>
-                                <DataTemplate>
-                                    <StackLayout Margin="0,10" Orientation="Horizontal">
-                                        <StackLayout>
-                                            <Image Source="{Binding defaultPictureLocation}" WidthRequest="100" HeightRequest="100"/>
-                                        </StackLayout>
-                                        <StackLayout Margin="0,15,0,0">
-                                            <Label Text="{Binding name}" TextColor="#000000" FontSize="13" FontFamily="Rubik-Medium"/>
-                                            <StackLayout Orientation="Horizontal" Spacing="2">
-
-                                                <Label Text="Amount:" TextColor="Black" FontSize="14" VerticalTextAlignment="Center" FontFamily="Rubik-Regular"/>
-                                                <Label Text="NGN" TextColor="{StaticResource PrimaryColor}" FontSize="12" VerticalTextAlignment="Center" FontFamily="Rubik-Regular"/>
-                                                <Label Text="{Binding price}" TextColor="{StaticResource PrimaryColor}" FontSize="14" FontFamily="Rubik-Medium"/>
-                                                <Label Text=".00" TextColor="{StaticResource PrimaryColor}" FontSize="14" FontFamily="Rubik-Medium"/>
-                                            </StackLayout>
+                                            <Label Text="Amount:" TextColor="Black" FontSize="14" VerticalTextAlignment="Center" FontFamily="Rubik-Regular"/>
+                                            <Label Text="NGN" TextColor="{StaticResource PrimaryColor}" FontSize="12" VerticalTextAlignment="Center" FontFamily="Rubik-Regular"/>
+                                            <Label Text="{Binding price}" TextColor="{StaticResource PrimaryColor}" FontSize="14" FontFamily="Rubik-Medium"/>
+                                            <Label Text=".00" TextColor="{StaticResource PrimaryColor}" FontSize="14" FontFamily="Rubik-Medium"/>
                                         </StackLayout>
                                     </StackLayout>
+                                </StackLayout>
 
-                                </DataTemplate>
-                            </BindableLayout.ItemTemplate>
-                        </StackLayout>
+                            </DataTemplate>
+                        </BindableLayout.ItemTemplate>
+                    </StackLayout>
 
-                        <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Margin="0,-40,0,0">
-                            <Label Text="Quantity:" TextColor="#000000" Margin="0,5,0,0" FontSize="14" FontFamily="Rubik-Regular"/>
-                            <Frame BackgroundColor="white" BorderColor="#cccccc" Margin="0,0,0,0" CornerRadius="5" Padding="5,-5" WidthRequest="40" HasShadow="False">
-                                <controls:CustomEditor
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Margin="0,-40,0,0">
+                        <Label Text="Quantity:" TextColor="#000000" Margin="0,5,0,0" FontSize="14" FontFamily="Rubik-Regular"/>
+                        <Frame BackgroundColor="white" BorderColor="#cccccc" Margin="0,0,0,0" CornerRadius="5" Padding="5,-5" WidthRequest="40" HasShadow="False">
+                            <controls:CustomEditor
                                             AutoSize="TextChanges"
                                             FontFamily="Rubik-Regular"
                                             FontSize="16"
@@ -88,33 +44,85 @@
                                             Keyboard="Numeric"
                                             Text="{Binding Quantity, Mode=TwoWay}"
                                             TextColor="Black"/>
-                            </Frame>
-                        </StackLayout>
+                        </Frame>
                     </StackLayout>
-                </Frame>
+                </StackLayout>
+            </Frame>
 
-                <StackLayout  Margin="0,10,0,30">
-                    <Label Text="Delivery note" TextColor="#000000" FontSize="14" FontFamily="Rubik-Medium" VerticalTextAlignment="Center"/>
+            <StackLayout  Margin="0,10,0,10">
+                <Label Text="Delivery note" TextColor="#000000" FontSize="14" FontFamily="Rubik-Medium" VerticalTextAlignment="Center"/>
 
-                    <Frame BackgroundColor="white" BorderColor="#cccccc"  CornerRadius="5" Padding="5" HasShadow="False">
-                        <controls:CustomEditor
+                <Frame BackgroundColor="white" BorderColor="#cccccc"  CornerRadius="5" Padding="5" HasShadow="False">
+                    <controls:CustomEditor
                                         AutoSize="TextChanges"
                                         FontFamily="Rubik-Regular"
                                         FontSize="16"
                                         Text="{Binding DeliveryInstruction}"
                                         Placeholder="Enter delivery note"
                                         TextColor="Black"/>
-                    </Frame>
-                </StackLayout>
-                <Frame HasShadow="False" CornerRadius="5" BackgroundColor="{StaticResource PrimaryColor}" Margin="0,10,0,0" Padding="0,15" >
-                    <Frame.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding PlaceOrderCommand}" CommandParameter="{Binding .}"/>
-                    </Frame.GestureRecognizers>
-                    <Label Text="Place Order" TextColor="#ffffff" FontFamily="Rubik-Regular" FontSize="18"  Margin="0,0,0,0" 
-                   HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
                 </Frame>
             </StackLayout>
-        </ScrollView>
-    </Grid>
+            <StackLayout Margin="0,0,0,0">
+                <Label Text="Phone Number"
+                               FontFamily="Poppins-Light"
+                               FontSize="14"
+                               Margin="0,0"
+                               TextColor="Black"/>
+
+                <Frame Padding="10,0,10,0" BorderColor="#cccccc" HeightRequest="45" Margin="0,0,0,0" HasShadow="False">
+                    <controls:CustomEntry 
+                                    VerticalTextAlignment="Center"
+                                    FontSize="14"
+                                    Text="{Binding Phone}"
+                                    PlaceholderColor="#cccccc"
+                                    Keyboard="Numeric"
+                                    MaxLength="11"
+                                    TextColor="Black"/>
+                </Frame>
+            </StackLayout>
+            <StackLayout Margin="0,10,0,0">
+                <Label Text="Address"
+                               FontFamily="Poppins-Light"
+                               FontSize="14"
+                               Margin="0,0"
+                               TextColor="Black"/>
+
+                <Frame Padding="10,0,10,0" BorderColor="#cccccc" HeightRequest="45" Margin="0,0,0,0" HasShadow="False">
+                    <controls:CustomEntry 
+                                    VerticalTextAlignment="Center"
+                                    FontSize="14"
+                                    Text="{Binding Address}"
+                                    Placeholder="Enter address"
+                                    PlaceholderColor="#cccccc"
+                                    TextColor="Black"/>
+                </Frame>
+            </StackLayout>
+            <StackLayout Margin="0,10,0,0">
+                <Label Text="City"
+                               FontFamily="Poppins-Light"
+                               FontSize="14"
+                               Margin="0,0"
+                               TextColor="Black"/>
+
+                <Frame Padding="10,0,10,0" BorderColor="#cccccc" HeightRequest="45" Margin="0,0,0,10" HasShadow="False">
+                    <controls:CustomEntry 
+                                    VerticalTextAlignment="Center"
+                                    FontSize="14"
+                                    Text="{Binding City}"
+                                    Placeholder="Enter city"
+                                    PlaceholderColor="#cccccc"
+                                    TextColor="Black"/>
+                </Frame>
+            </StackLayout>
+            <Frame HasShadow="False" CornerRadius="5" BackgroundColor="{StaticResource PrimaryColor}" Margin="0,10,0,0" Padding="0,15" >
+                <Frame.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding PlaceOrderCommand}" CommandParameter="{Binding .}"/>
+                </Frame.GestureRecognizers>
+                <Label Text="Place Order" TextColor="#ffffff" FontFamily="Rubik-Regular" FontSize="18"  Margin="0,0,0,0" 
+                   HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
+            </Frame>
+        </StackLayout>
+    </ScrollView>
+
 
 </ContentPage>
