--- a/CBayMobileApp/Views/Account/Membership.xaml
+++ b/CBayMobileApp/Views/Account/Membership.xaml
@@ -84,7 +84,7 @@
                         </StackLayout>
                     </FlexLayout>
                 </Frame>
-                <Frame  BorderColor="#C4C6CF" BackgroundColor="White" HasShadow="False" Margin="0,-10">
+                <!--<Frame  BorderColor="#C4C6CF" BackgroundColor="White" HasShadow="False" Margin="0,-10">
                     <Frame.GestureRecognizers>
                         <TapGestureRecognizer />
                     </Frame.GestureRecognizers>
@@ -100,7 +100,7 @@
                             <Image Source="cbayforwardarrow.png"/>
                         </StackLayout>
                     </FlexLayout>
-                </Frame>
+                </Frame>-->
 
             </StackLayout>
 
