--- a/CBayMobileApp/Views/Home/Dashboard.xaml
+++ b/CBayMobileApp/Views/Home/Dashboard.xaml
@@ -23,16 +23,25 @@
 
             <Frame BackgroundColor="{StaticResource PrimaryColor}" HorizontalOptions="FillAndExpand" CornerRadius="10" Margin="0,5" HasShadow="False">
                 <StackLayout>
-                    <Label Text="WALLET BALANCE" TextColor="#ffffff" FontSize="14" FontFamily="DMSans-Regular" Margin="0,5"/>
+                    <StackLayout>
+                        <Label Text="WALLET BALANCE" TextColor="#ffffff" FontSize="14" FontFamily="DMSans-Regular" Margin="0,0"/>
 
-                    <StackLayout Orientation="Horizontal" Margin="0,0,0,0">
-                        <StackLayout Orientation="Horizontal" Spacing="0">
-                            <Label Text="NGN" TextColor="#ffffff" FontSize="20" FontFamily="DMSans-Medium"/>
-                            <Label Text="{Binding AvailableBalance}" TextColor="#ffffff" FontSize="20" FontFamily="DMSans-Medium"/>
-                            <Label Text=".00" TextColor="#ffffff" FontSize="20" FontFamily="DMSans-Medium"/>
+                        <StackLayout Orientation="Horizontal" Margin="0,-3,0,0" Spacing="0">
+                            <StackLayout Orientation="Horizontal" Spacing="0">
+                                <!--<Label Text="NGN" TextColor="#ffffff" FontSize="20" FontFamily="DMSans-Medium"/>-->
+                                <Label Text="{Binding Balance}" TextColor="#ffffff" FontSize="20" FontFamily="DMSans-Medium"/>
+                            </StackLayout>
+                            <!--<Image Source="cbayeye.png" VerticalOptions="CenterAndExpand" WidthRequest="35" HeightRequest="20" Margin="10,0,0,0"/>-->
                         </StackLayout>
-                        
-                        <!--<Image Source="cbayeye.png" VerticalOptions="CenterAndExpand" WidthRequest="35" HeightRequest="20" Margin="10,0,0,0"/>-->
+                    </StackLayout>
+                    <StackLayout IsVisible="{Binding WalletBonus}" Spacing="0" Margin="0,5,0,0">
+                        <Label Text="WALLET BONUS" TextColor="#ffffff" FontSize="14" FontFamily="DMSans-Regular" Margin="0,0"/>
+                        <StackLayout Orientation="Horizontal" Margin="0,0,0,0">
+                            <StackLayout Orientation="Horizontal" Spacing="0">
+                                <!--<Label Text="NGN" TextColor="#ffffff" FontSize="18" FontFamily="DMSans-Medium"/>-->
+                                <Label Text="{Binding BonusBalance}" TextColor="#ffffff" FontSize="18" FontFamily="DMSans-Medium"/>
+                            </StackLayout>
+                        </StackLayout>
                     </StackLayout>
                 </StackLayout>
             </Frame>
@@ -58,8 +67,8 @@
            
         </StackLayout>
 
-        <StackLayout Grid.Row="1" Margin="0,0,0,10">
-            <Frame Padding="20,15" BackgroundColor="#FFF8F5" HorizontalOptions="FillAndExpand" CornerRadius="10"  Margin="0,10" HasShadow="False">
+        <StackLayout Grid.Row="1" Margin="0,0,0,10" Spacing="0">
+            <!--<Frame Padding="20,15" BackgroundColor="#FFF8F5" HorizontalOptions="FillAndExpand" CornerRadius="10"  Margin="0,10" HasShadow="False">
                 <StackLayout Orientation="Horizontal">
                     <StackLayout Margin="0,0,10,0" VerticalOptions="CenterAndExpand">
                         <Label Text="Products" TextColor="#000000" FontSize="18" FontFamily="DMSans-Bold" HorizontalTextAlignment="Start" VerticalTextAlignment="Center"/>
@@ -69,9 +78,30 @@
                     <Image Source="cbayproduct.png" HeightRequest="100" WidthRequest="100" HorizontalOptions="EndAndExpand" Margin="0,0,-20,0"/>
                     <Image Source="cbayproduct1.png" HeightRequest="100" WidthRequest="100" Margin="0,0,0,0" HorizontalOptions="EndAndExpand"/>
                 </StackLayout>
-            </Frame>
+            </Frame>-->
 
-            <FlexLayout JustifyContent="SpaceBetween" AlignItems="Center">
+            <CollectionView x:Name="cvBanner" ItemsSource="{Binding ProductData}" Margin="0,10,0,0" >
+                <CollectionView.ItemsLayout>
+                    <GridItemsLayout VerticalItemSpacing="5" HorizontalItemSpacing="5" Orientation="Horizontal"/>
+                </CollectionView.ItemsLayout>
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <StackLayout WidthRequest="100">
+                            <StackLayout.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding Path=BindingContext.TappedCommand, Source={x:Reference cvBanner}}" CommandParameter="{Binding .}"/>
+                            </StackLayout.GestureRecognizers>
+                            <Frame Padding="10" HasShadow="False" CornerRadius="10" BackgroundColor="#EFF1F8">
+                                <StackLayout Margin="0,0">
+                                    <Image Source="{Binding defaultPictureLocation}" WidthRequest="100" HeightRequest="100" HorizontalOptions="StartAndExpand"/>
+                                </StackLayout>
+                            </Frame>
+                            <Label Text="{Binding name}" TextColor="#272728" FontSize="14" Margin="10,0,0,0" FontFamily="DMSans-Regular" HorizontalTextAlignment="Start"/>
+                        </StackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+
+            <FlexLayout JustifyContent="SpaceBetween" AlignItems="Center" Margin="0,0,0,0">
                 <Label Text="Recent Earning" TextColor="#212121" FontSize="16" Margin="0,0,0,0" FontFamily="DMSans-Medium" HorizontalTextAlignment="Center"/>
                 <Label Text="View All" TextColor="{StaticResource PrimaryColor}" FontSize="16" Margin="0,0,0,0" FontFamily="DMSans-Medium" HorizontalTextAlignment="Center">
                     <Label.GestureRecognizers>
