--- a/CBayMobileApp/Views/Identity/ForgotPasswordPage.xaml
+++ b/CBayMobileApp/Views/Identity/ForgotPasswordPage.xaml
@@ -52,7 +52,7 @@
 
         <Frame HasShadow="False" CornerRadius="10" BackgroundColor="{StaticResource PrimaryColor}" Margin="0,10,0,0" Padding="0,10" >
             <Frame.GestureRecognizers>
-                <TapGestureRecognizer />
+                <TapGestureRecognizer Command="{Binding ForgotPasswordCommand}"/>
             </Frame.GestureRecognizers>
             <Label Text="Send Reset Link" TextColor="#ffffff" FontFamily="Rubik-Regular" FontSize="18"  Margin="0,0,0,0" 
                    HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
