--- a/CBayMobileApp/Views/Account/WebviewPage.xaml
+++ b/CBayMobileApp/Views/Account/WebviewPage.xaml
@@ -2,8 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CBayMobileApp.Views.Account.WebviewPage"
-             BackgroundColor="White"
-             Title="Privacy Policy">
+             BackgroundColor="White">
 
     <ContentPage.Content>
         <WebView x:Name="webView" VerticalOptions="FillAndExpand" Margin="10"/>
